k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finpos-merchant-web-portal
  labels:
    app: finpos-merchant-web-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finpos-merchant-web-portal
  template:
    metadata:
      labels:
        app: finpos-merchant-web-portal
    spec:
      containers:
        - name: finpos-merchant-web-portal
          image: reg.citytech.global/finpos/finpos-merchant-web-portal:${BUILD_NUMBER}
          imagePullPolicy: Always
          ports:
            - containerPort: 80
            - containerPort: 443
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 256Mi
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
