k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finpos-merchant-web-portal-service
spec:
  selector:
    app: finpos-merchant-web-portal
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
