k8s/ingress-qa.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: {
    "kubernetes.io/ingress.class": "nginx",
    "nginx.ingress.kubernetes.io/add-base-url": "true",
    "nginx.ingress.kubernetes.io/rewrite-target": "/$2",
    "nginx.ingress.kubernetes.io/ssl-redirect": "true"
  }
  name: finpos-merchantweb-ingress
  #namespace: default
spec:
  rules:
    - host: qa.citytech.global
      http:
        paths:
          - path: /finpos-merchant-portal(/|$)(.*)
            backend:
              serviceName: finpos-merchant-web-portal-service
              servicePort: 80

  tls:
    - hosts:
        - citytech.global
      secretName: citytech-cert
